--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,13 +10,13 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images\x-icon\clipart4338423.png"
+      href=""
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="images\x-icon\clipart4338423.png"
+      href=""
     />
     <link
       rel="icon"
