--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="images\x-icon\clipart4338423.png"
+      href=""
     />
     <link rel="manifest" href="images/x-icon/site.webmanifest" />
     <link rel="stylesheet" href="css/three-dots.min.css" />
