--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     </header>
-
+    
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
@@ -63,25 +63,25 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          The next tier is coming soon!
+          A new batch of cute cats will be available very soon!
         </p>
         <a
           id="actionButton"
-          href=""
+          href="https://discord.gg/A9CnsVzzkZ"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
-          ><span>Join the fight!</span>
+          ><span>Join the Catmmunity</span>
         </a>
         <div id="mintContainer" class="mint-container hidden">
           <div class="info-container">
             <div>
               <h3>Supply</h3>
-              <p id="totalSupply">1000</p>
+              <p id="totalSupply">100</p>
             </div>
             <div>
               <h3>Price Per Mint</h3>
-              <p id="pricePerMint">.017 ETH</p>
+              <p id="pricePerMint">1 ETH</p>
             </div>
             <div>
               <h3>Max</h3>
@@ -105,7 +105,7 @@
           </div>
           <div class="total-price-container">
             <h3>Total</h3>
-            <p id="totalPrice">.017 ETH</p>
+            <p id="totalPrice">.001 ETH</p>
           </div>
           <button id="mintButton" class="hero-btn btn mint-btn">Mint</button>
         </div>
@@ -120,7 +120,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href=""
+          href="https://testnets.opensea.io/collection/teststackr-collection"
           target="_blank"
           rel="noopener noreferrer"
         >
@@ -135,15 +135,8 @@
       <div class="splide__track">
         <ul class="splide__list">
           <li class="splide__slide">
-            <img src="images/slider/0.png" />
-          </li>
-          <li class="splide__slide">
-            <img src="images/slider/1.png" />
-          </li>
-          <li class="splide__slide">
-            <img src="images/slider/2.png" />
-          </li>
-          </li>
+            <img src="images/slider/1.gif" />
+          </li> 
         </ul>
       </div>
     </div>
