--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,7 +135,9 @@
       <div class="splide__track">
         <ul class="splide__list">
           <li class="splide__slide">
-            <img src="images/slider/1.gif" />
+            <img src="images/slider/1.png" />
+            <img src="images/slider/2.png" />
+            <img src="images/slider/0.png" />
           </li> 
         </ul>
       </div>
